--- a/src/components/CardExperiencia.module.css
+++ b/src/components/CardExperiencia.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     padding: 30px 10px;
     border-radius: 10px;
-    width: 23vw;
+    width: 24vw;
     justify-content: center;
     align-items: center;
     background-color: rgb(11, 11, 11);
@@ -24,8 +24,9 @@
         align-items: center;
         padding: 10px;
         >li{
-            padding: 5px;
+            padding: 10px;
             border: 2px solid rgb(5, 5, 200);
+            border-radius: 10px;
             list-style: none;
         }
     }
