--- a/src/components/CardProjeto.module.css
+++ b/src/components/CardProjeto.module.css
@@ -59,3 +59,10 @@
     border: 2px solid white;
     cursor: pointer;
 }
+
+
+@media (max-width: 1024px) {
+    .card{
+        width: 90vw;
+    }
+}
