--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -8,7 +8,8 @@
     padding: 10px;
     color: white;
     position: fixed;
-    ul{
+
+    >ul.desktop{
         list-style: none;
         display: flex;
         justify-content: space-around;
@@ -23,4 +24,56 @@
             background-color: rgba(138, 133, 132, 0.4);
         }
     }
+
+    >.mobile{
+        display: none;
+        width: 100vw;
+        >ul{
+            list-style: none;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            
+
+            >li{
+                width: 100%;
+                background-color: black;
+                padding: 15px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        }
+    }
+
+    >img{
+        display: none;
+    }
+
+}
+
+@media (max-width: 1024px) {
+    .menu{
+        justify-content: space-between;
+        align-items: center;
+
+        >ul.desktop{
+            display: none;
+        }    
+        >.mobile{
+            display: block;
+            position: absolute;
+            width: 100vw;
+            z-index: 100;
+            top: 10vh;
+            left: 0;
+        }
+
+        img{
+            display: block;
+        }
+    }
+
+
 }
