--- a/src/pages/Inicio.module.css
+++ b/src/pages/Inicio.module.css
@@ -23,3 +23,15 @@
 
     }
 }
+
+@media (max-width: 1024px) {
+    .inicio{
+        .overlay{
+            div{
+                font-size: large;
+                font-weight: bold;
+            }
+    
+        }
+    }
+}
